# mobile-agent-platform-android

./: .project
app/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-activity.cpp  native-lib.cpp
app/src/main/java/mobile/agentplatform/: MainActivity.kt  NodeNativeActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
